fixed some layout issues, almost to the point of beginning final complex issues.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,6 +1,6 @@
 h1 {
 	font-family: arial, sans-serif;
-	font-style: bold;
+	font-weight: bold;
 	font-size: 20px;
 	display: inline-block;
 	float: right;
@@ -22,7 +22,7 @@ p {
 .subbox i {
 	color: #1DA1F2;
 	margin-top: 13px;
-	margin-left: 17px;
+	margin-left: 19px;
 	display: inline-block;
 }
 
@@ -32,12 +32,16 @@ img {
 	margin-top: -30px;
 }
 
+.mainTshirt {
+	height:300px;
+}
+
 .subbox img {
 	max-height: 50%;
 	max-width: 50%;
 	display: inline-block;
-	margin-top: 13px;
-	margin-left: 17px;
+	vertical-align: center;
+	margin: 2px;
 }
 
 .container {
@@ -117,6 +121,7 @@ img {
 }
 
 .bottom {
+	margin-top: 5px;
 	width: 100%;
 	height: 50px;
 	display: inline-block;
@@ -124,39 +129,71 @@ img {
 
 .subbox {
 	display: inline-block;
+	position: justify;
 	vertical-align: top;
 	height: 100%;
-	width: 18.8%;
+	width: 19%;
 	border-right:2px solid;
 	border-color: #1DA1F2;
-	margin-left: -2px;
+	margin-left: -2.3px;
 }
 
-.dropbtn {
-    font-size: 16px;
+.subbox:nth-child(5) {
+	border-right: none;
+}
+
+.subbox a:hover {
+	background-color: #1DA1F2;
+
+}
+
+.dropbtnText {
+    font-size: 18px;
+    color:#1DA1F2;
     border: none;
     cursor: pointer;
     vertical-align: top;
     display: inline-block;
+    background: none;
+    padding: 0;
+    margin-left: 12px;
+    margin-top: 3px;
+}
+
+.dropbtnIMG {
+	font-size: 18px;
+    border: none;
+    cursor: pointer;
+    vertical-align: top;
+    display: inline-block;
+    background: none;
+    padding: 0;
+    margin:0;
+}
+
+.buttonfix {
+
 }
 
 .dropdown {
-  position: absolute;
-  display: inline-block;
+  display: block;
+  background:none;
   vertical-align: top;
   margin-top: 4px;
 }
 
 .dropdown-content {
     display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    top:-75px;
+    position: relative;
+    background-color: white;
+    border: 2px solid #1DA1F2;
+    border-bottom: none;
+    min-width: 50px;
+    top: -160px;
+    box-shadow: 0px 0px 10px 10px, rgba(0,0,0,0.5);
 }
 
 .dropdown-content a {
-    color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -169,6 +206,7 @@ img {
 .dropdown:hover .dropdown-content {
     display: block;
     align-content: center;
+    background-color: none;
 }
 
 .dropdown:hover .dropbtn {
@@ -178,16 +216,18 @@ img {
 .dropdown-content ul {
   padding:0;
   margin:0;
+  display: block;
 }
 
-@media only screen and (max-width: 100%) {
-    .left, .middle, .right {
-        width:100%;
-    }
-}
 
-@media only screen and (max-width: 33%) {
-	.left, .middle, .right {
+@media only screen and (max-width: 400px) {
+	.column .left, .middle, .right {
 		width: 10%;
 	}
+}
+
+@media only screen and (max-width: 990px) {
+    .column .left, .middle, .right {
+        width:100%;
+    }
 }
